--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,13 +1,13 @@
 NAME = philo
 
-CFLAGS = -g -Wall -Wextra -Werror -pthread -fsanitize=address
+CFLAGS = -g -Wall -Wextra -Werror -pthread #-fsanitize=address
 IFLAG = -I./include
 
 SRC_DIR = src
 OBJ_DIR = obj
 
 FILES = philo.c table_init.c forks_init.c routine_init.c routines.c\
-routines_utils.c lib_utils.c get_n_set.c error.c test.c
+routines_utils.c lib_utils.c get_n_set.c error.c checks.c
 
 OBJ_FILES = $(addprefix $(OBJ_DIR)/, $(FILES:.c=.o))
 
