fixed exit on bonus, added cleanup_n_exit 2

--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -1,6 +1,6 @@
 NAME = philo_bonus
 
-CFLAGS = -g -Wall -Wextra -Werror -pthread #-fsanitize=address
+CFLAGS = -g -Wall -Wextra -Werror -pthread #-fsanitize=thread
 IFLAG = -I./include
 
 SRC_DIR = src
