Included solo routine for a thread

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,19 +6,19 @@
 #    By: jose-gon <jose-gon@student.42malaga.com>   +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/09/16 01:11:00 by jose-gon          #+#    #+#              #
-#    Updated: 2024/10/06 02:38:20 by jose-gon         ###   ########.fr        #
+#    Updated: 2024/10/06 22:13:51 by jose-gon         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = philo
 
-CFLAGS = -g -Wall -Wextra -Werror -pthread -fsanitize=thread
+CFLAGS = -g -Wall -Wextra -Werror -pthread #-fsanitize=thread
 IFLAG = -I./include
 
 SRC_DIR = src
 OBJ_DIR = obj
 
-FILES = philo.c table_init.c forks_init.c routine_init.c routine_ob.c\
+FILES = philo.c table_init.c forks_init.c routine_init.c routines.c routine_ob.c\
 routines_utils.c routines_utils2.c lib_utils.c get_n_set.c error.c checks.c \
 
 OBJ_FILES = $(addprefix $(OBJ_DIR)/, $(FILES:.c=.o))
